deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bipins-ai
  labels:
    name: bipins-ai
